k8s/base/infra/istio/v1.27.0/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cluster-infra
  labels:
    istio.io/rev: 1-27-0
