k8s/base/infra/istio/v1.27.0/assets-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: istio-assets-ingress
  namespace: cluster-infra
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /assets
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
