k8s/base/infra/istio/v1.27.0/virtualservice127.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-127
spec:
  gateways:
    - cluster-infra/main-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: krakend-svc.krakend.svc.cluster.local
            port:
              number: 80
